--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "The complication of my front-end interview preparation",
   "main": "index.js",
   "scripts": {
-    "format": "pretty-quick"
+    "format": "pretty-quick",
+    "start:js": "babel-node src/js/index.js"
   },
   "author": "Yuchen Qiao",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.9.0",
